# CodeSnippetForCPP

./: .clang-format  CMakeLists.txt  README.md  README_EN.md
cmake/: TestFunctions.cmake
src/: CMakeLists.txt
src/MemberAccess/: CMakeLists.txt  MemberAccess.hpp  README.md
src/MemberAccess/test/: test_common.h  test_no_member.cpp  test_private_member.cpp  test_protected_member.cpp  test_public_member.cpp
src/MemberCount/: CMakeLists.txt  MemberCount.hpp  README.md
src/MemberCount/test/: test_member_count.cpp
